--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^5.7.1",
+    "@prisma/client": "^5.20.0",
     "init": "^0.1.2",
     "next": "14.2.14",
     "prisma": "^5.20.0",
