--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
-NODE_MAILER_EMAIL=
-NODE_MAILER_GMAIL_APP_PASSWORD=
+NODE_MAILER_EMAIL="alefevt@gmail.com"
+NODE_MAILER_GMAIL_APP_PASSWORD="ztno azqe zmld xmqn"
 
-NEXT_PUBLIC_PUSHER_APP_CLUSTOR=
-NEXT_PUBLIC_PUSHER_APP_SECRET=
-NEXT_PUBLIC_PUSHER_APP_KEY=
-NEXT_PUBLIC_PUSHER_APP_ID=
+NEXT_PUBLIC_PUSHER_APP_CLUSTOR="us2"
+NEXT_PUBLIC_PUSHER_APP_SECRET="f2c51ef38bb11ef7e0e5"
+NEXT_PUBLIC_PUSHER_APP_KEY="0f94a4c83dc1465f2826"
+NEXT_PUBLIC_PUSHER_APP_ID="1878426"
 
 OPEN_AI_KEY=
 
