--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.3",
+    "@stripe/react-stripe-js": "^2.8.1",
     "@uploadcare/react-uploader": "^1.1.0",
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
@@ -66,6 +67,7 @@
     "react-resizable-panels": "^2.1.4",
     "recharts": "^2.12.7",
     "sonner": "^1.5.0",
+    "stripe": "^17.2.0",
     "tailwind-merge": "^2.5.3",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.0.0",
